--- a/Spartan_MAD4114_IOS_Project/Base.lproj/Main.storyboard
+++ b/Spartan_MAD4114_IOS_Project/Base.lproj/Main.storyboard
@@ -286,7 +286,7 @@
         </scene>
     </scenes>
     <inferredMetricsTieBreakers>
-        <segue reference="cby-iO-MtN"/>
+        <segue reference="vqV-Pd-nlN"/>
         <segue reference="Ksw-ZS-i3V"/>
     </inferredMetricsTieBreakers>
 </document>
